# skilllink

./: .gitignore  README.md  install.sh  pyproject.toml
.claude/commands/: skill-this-project.md
skilllink/: catalog.py  cli.py  linker.py
tests/: test_catalog.py  test_linker.py
